Cambios muy fuertes [refactoring bravo] en el código. Se optimizaron los entities, dto's, daos y capas de managers de servicio